--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.kshirsa'
-version = '0.0.1-SNAPSHOT'
+version = 'v0.1'
 
 java {
 	toolchain {
@@ -23,14 +23,24 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	jwtVersion = '0.11.5'
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'com.sendgrid:sendgrid-java:4.10.3'
+	implementation 'org.modelmapper:modelmapper:3.2.0'
+	implementation 'io.jsonwebtoken:jjwt-api:' + jwtVersion
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:' + jwtVersion
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:' + jwtVersion
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
