Updated dev yml file Added keep alive method

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,39 @@
-
-
 ######## CHECK MAIL ########
 checkMail:
   key: ${CHECK_MAIL_KEY}
   host: ${CHECK_MAIL_HOST}
+
+######## PostgreSql ########
+spring:
+  datasource:
+    url: ${DATABASE_URL}
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
+  jpa:
+    hibernate:
+      ddl-auto: update
+
+  ############### EMAIL SETUP ###############
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${EMAIL_USERNAME}
+    password: ${EMAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
+########### Properties Values ###########
+JWT:
+  VALIDITY: ${JWT_VALIDITY}
+  SECRET: ${JWT_SECRET}
+
+REFRESH:
+  TOKEN:
+    VALIDITY: ${REFRESH_TOKEN_VALIDITY}
+
+ALLOWED:
+  ORIGINS: ${ALLOWED_ORIGINS}
