--- a/.github/workflows/github-actions-prod.yml
+++ b/.github/workflows/github-actions-prod.yml
@@ -50,7 +50,7 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/kshirsa:latest
+            ${{ secrets.DOCKER_HUB_USERNAME }}/kshirsa:prod
 
       # Trigger Render Deployment
       - name: Trigger Render Deployment
