--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,4 +1,8 @@
-
+####### Geolite2 ########
+GEOLITE:
+  LICENCE:
+    KEY: ${GEOLITE_LICENCE_KEY}
+  ACCOUNTID: ${GEOLITE_ACCOUNTID}
 
 ######## CHECK MAIL ########
 checkMail:
