Added APIs to add transaction & category Added APIs to get all transaction & category

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,12 @@ server:
     include-stacktrace: never
 
 ###############Swagger###################
+springdoc:
+  swagger-ui:
+    operations-sorter: alpha
+    tags-sorter: alpha
+
+############### Actuator ###################
 management:
   endpoints:
     web:
