Implemented Transaction Service added api to add category, transaction

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,8 +8,8 @@ spring:
       mode: always
   jpa:
     defer-datasource-initialization: true
-    open-in-view: false
 
+#    open-in-view: false
 server:
   servlet:
     context-path: /kshirsa
